fix footer covering content problem

--- a/projfrontend/src/styles.css
+++ b/projfrontend/src/styles.css
@@ -8,9 +8,9 @@ body {
   background: #343a40;
 }
 
-footer {
+/* footer {
     position:absolute;
     bottom: 0;
     left: 0;
     right: 0;
-}
+} */
